Switched the header image. Testing first release.

--- a/deaf/theme/browser/stylesheets/main.css
+++ b/deaf/theme/browser/stylesheets/main.css
@@ -195,7 +195,7 @@ a#portal-logo, a:visited#portal-logo {
 /* layout */
 
 #portal-top {
-  background: url("++resource++deaf.theme.images/background-the-power.png") no-repeat center 68px;
+  background: url("++resource++deaf.theme.images/header-website-ruimte.jpg") no-repeat 265px 68px;
 }
 
 #portal-header {
